# introduccion_bioinformatica

./: .gitignore  404.html  LICENSE  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
77_useful_code/grid_test/: index.html
HOWTO/: INSTALAR.md  README.md  USO.md
README/: README.md
acerca/: index.html
comollegar/: index.html
contenidos/: index.html
cronograma/: index.html
docentes/: index.html
docs/: acerca.md  comollegar.md  contenidos.md  cronograma.md  docentes.md  index.md  instructivos.md  tags.md
docs/77_useful_code/: grid_test.md
docs/info/: acerca.md  comollegar.md  contenidos.md  cronograma.md  docentes.md  evaluacion.md
docs/instructivos/: inicio.md
docs/practicos/: .pages  inicio.md  resumen.md  tpsGrid.md
docs/stylesheets/: extra.css
docs/teoricas/: inicio.md  resumen.md
info/acerca/: index.html
info/comollegar/: index.html
info/contenidos/: index.html
info/cronograma/: index.html
info/docentes/: index.html
info/evaluacion/: index.html
instructivos/: index.html
instructivos/R/: index.html
instructivos/inicio/: index.html
instructivos/maquina_virtual/: index.html
instructivos/problemasVM/: index.html
instructivos/replit/: index.html
instructivos/tipsVM/: index.html
javascripts/: tablesort.js
practicos/1-Trabajo-Practico-Uno/: index.html  secuencias_alineadas_seleccion.fasta
practicos/2-Trabajo-Practico-Dos/: index.html
practicos/3-Trabajo-Practico-Tres/: index.html
practicos/TP01_Linux/: index.html
practicos/TP02_EMBOSS/: index.html
practicos/TP03_Alineamientos/: index.html
practicos/TP04_Busqueda_por_similitud/: index.html
practicos/TP05_Clustering_Data_Mining/: index.html
practicos/TP05_PSI-BLAST/: index.html
practicos/TP05_Quimioinformatica/: index.html
practicos/TP05a_R/: index.html
practicos/TP05b_R/: index.html
practicos/TP06_Filogenia/: index.html
practicos/TP06_HMM/: index.html
practicos/TP06_PSI-BLAST/: index.html
practicos/TP06_Quimioinformatica/: index.html
practicos/TP07_Desorden/: index.html
practicos/TP07_HMM_ANN/: index.html
practicos/TP07_Quimioinformatica/: index.html
practicos/TP07_Short-Read-Mapping/: index.html
practicos/TP08_Clustering_Data_Mining/: index.html
practicos/TP08_Desorden/: index.html
practicos/TP08_Motivos/: index.html
practicos/TP08_R/: index.html
practicos/TP08a_Clustering/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
stylesheets/: extra.css
tags/: index.html
(+167 files in other folders)
