[tool.poetry]
name = "introduccion-bioinformatica"
version = "08.2024"
description = "Sitio Introduccion a la Bioinformatica UNSAM - Material for Mkdocs"
authors = ["Fernan Aguero <fernan@iib.unsam.edu.ar>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
jinja2 = ">=3.0,<4.0"
markdown = ">=3.2,<4.0"
mkdocs = ">=1.6,<2.0"
mkdocs-material = "^9.5.31"
mkdocs-material-extensions = ">=1.3,<2.0"
pygments = ">=2.16,<3.0"
pymdown-extensions = ">=10.2,<11.0"
babel = ">=2.10,<3.0"
colorama = ">=0.4,<1.0"
paginate = ">=0.5,<1.0"
regex = ">=2022.4"
requests = ">=2.26,<3.0"
mkdocs-minify-plugin = ">=0.7,<1.0"
mkdocs-redirects = ">=1.2,<2.0"
mkdocs-rss-plugin = ">=1.6,<2.0"
mkdocs-git-committers-plugin-2 = ">=1.1,<2.0"
mkdocs-git-revision-date-localized-plugin = ">=1.2.4,<2.0"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-glightbox = "^0.4.0"
mkdocs-video = "^1.5.0"
pillow = ">=10.2,<11.0"
cairosvg = ">=2.6,<3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
